# Psi0

./: .gitignore
real/deploy/: mock_client.py
scripts/deployment/thor/: install_deps.sh  pyproject.toml
src/psi/deploy/: psi_serve_rtc-trainingtimertc.py
src/psi/models/: psi0.py
