# Jetson Thor platform pyproject.toml — known-working Psi0 Thor stack
# aarch64, CUDA 13, Python 3.12

[build-system]
requires = ["setuptools>=67", "wheel", "pip"]
build-backend = "setuptools.build_meta"

[project]
name = "psi0"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
  "accelerate==1.7.0",
  "albumentations==1.4.18",
  "datasets==3.6.0",
  "diffusers==0.35.2",
  "dm-tree==0.1.8",
  "draccus==0.10.0",
  "einops==0.8.1",
  "einx==0.4.3",
  "fastapi==0.136.3",
  "gdown==6.0.0",
  "h5py==3.14.0",
  "huggingface-hub[cli]==0.36.2",
  "imageio==2.34.2",
  "json-numpy==2.1.1",
  "jsonlines==4.0.0",
  "numpy==1.26.4",
  "numpydantic==1.6.7",
  "omegaconf==2.3.0",
  "opencv-python-headless==4.11.0.86",
  "pandas==3.0.3",
  "pillow==12.2.0",
  "pydantic==2.10.6",
  "pydantic-yaml==1.6.0",
  "python-dotenv==1.2.2",
  "qwen-vl-utils==0.0.14",
  "requests==2.34.2",
  "safetensors==0.7.0",
  "scipy==1.17.1",
  "sentencepiece",
  "simplejpeg==1.9.0",
  "tokenizers==0.22.2",
  "tqdm==4.67.3",
  "transformers==4.57.6",
  "typer==0.25.1",
  "tyro==0.9.32",
  "uvicorn==0.48.0",
  "wandb==0.24.2",
  "websocket-client==1.9.0",
  "websockets==16.0",
  "torch==2.12.0",
  "torchvision==0.27.0",
  "torchcodec==0.13.0",
  "triton==3.7.0",
  "flash-attn==2.8.4",
  "cuda-toolkit==13.0.2",
  "nvidia-cudnn-cu13==9.20.0.48",
  "nvidia-cudss-cu13==0.8.0.10",
]

[tool.uv]
environments = [
  "sys_platform == 'linux' and platform_machine == 'aarch64'",
]

[tool.uv.extra-build-dependencies]
flash-attn = ["torch==2.12.0", "numpy==1.26.4", "triton==3.7.0"]

[tool.uv.sources]
torch = [{ index = "pytorch-cu130" }]
torchvision = [{ index = "pytorch-cu130" }]
torchcodec = [{ index = "pytorch-cu130" }]
triton = [{ index = "pytorch-cu130" }]

flash-attn = [{ index = "jetson-sbsa-cu130" }]

cuda-toolkit = [{ index = "nvidia-pypi" }]
nvidia-cudnn-cu13 = [{ index = "nvidia-pypi" }]
nvidia-cudss-cu13 = [{ index = "nvidia-pypi" }]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[[tool.uv.index]]
name = "nvidia-pypi"
url = "https://pypi.nvidia.com"
explicit = true

[[tool.uv.index]]
name = "jetson-sbsa-cu130"
url = "https://pypi.jetson-ai-lab.io/sbsa/cu130/+simple"
explicit = true
